[package]
name = "clusterforge"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = { version = "0.33", features = ["lazy", "csv", "temporal", "strings"] }
linfa = "0.7"
linfa-clustering = "0.7"
linfa-preprocessing = "0.7"
linfa-nn = "0.7"
ndarray = "0.15"
clap = { version = "4.0", features = ["derive"] }
plotters = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
tempfile = "3.0"
